Activity: cut off descenders fixed on sidebar

--- a/client/Social/Activity/styl/activity.styl
+++ b/client/Social/Activity/styl/activity.styl
@@ -330,15 +330,16 @@ styleScrollBars()
               display     block
               float       none
               padding     0 0 0 41px
+              line-height 18px
               width       100%
               borderBox()
 
             > .user-numbers
               padding     0 0 0 41px
+              margin      -1px 0 0
               width       90%
               font-weight 300
               color       #949494
-              margin-top  1px
               borderBox()
 
               span
